@@ -1,4 +1,8 @@
-﻿drkns 02.02.2016 09:55:00 +0200 - build 4531
+﻿drkns 02.02.2016 19:55:16 +0200 - build 4532
+
+1. С форума: в одном из билдов 4482-4484 сломался Editor.SetStr
+
+drkns 02.02.2016 09:55:00 +0200 - build 4531
 
 1. При удалении элемента из списка дополнения не обновлялось содержимое комстроки.
 
